# haskell-trigonometry

./: .gitignore  Angle.hs  AngleFunctions.hs  CHANGELOG.md  Formulas.hs  InverseTrigFunctions.hs  LICENSE  Main.hs  Point.hs  README.md  RightTriangle.hs  TrigFunctions.hs  Types.hs  UnitCircle.hs  haskell-trigonometry.cabal
app/: Main.hs
src/: Angle.hs  Formulas.hs  Point.hs  RightTriangle.hs  TrigFunctions.hs  Types.hs  UnitCircle.hs
src/Angle/: Angle.hs
src/Util/: Functions.hs
test/: Main.hs
