cabal-version: 3.8
name: haskell-trigonometry
version: 0.1.0.0
license: BSD-3-Clause
license-file: LICENSE
author: Feliu
maintainer: github.com/fpalm1991
category: Math
build-type: Simple
extra-doc-files: CHANGELOG.md

common warnings
  ghc-options: -Wall

library
  import: warnings
  exposed-modules:
    Angle
    Formulas
    InverseTrigFunctions
    Point
    RightTriangle
    TrigFunctions
    Types
    UnitCircle

  build-depends: base ^>=4.18.3.0
  hs-source-dirs: src
  default-language: GHC2021

executable haskell-trigonometry
  import: warnings
  main-is: Main.hs
  build-depends:
    base ^>=4.18.3.0,
    haskell-trigonometry,

  hs-source-dirs: app
  default-language: GHC2021

test-suite haskell-trigonometry-test
  import: warnings
  default-language: GHC2021
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Main.hs
  build-depends:
    base ^>=4.18.3.0,
    haskell-trigonometry,
    hspec >=2.10 && <3,
